fix(Button): text align center

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -116,7 +116,7 @@
 @button-normal-font-size: @font-size-md;
 @button-large-height: 50px;
 @button-default-height: 44px;
-@button-default-line-height: 1.5;
+@button-default-line-height: 1.2;
 @button-default-font-size: @font-size-lg;
 @button-default-color: @text-color;
 @button-default-background-color: @white;
